--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- ====Title====-->
-    <title>MOHIN Info</title>
+    <title>MOHIN Info Here</title>
     <!-- ====Font-awesome====-->
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css">
     <!-- ====For Bootstrap-4====-->
